# interstellar

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.MD  README.md  SECURITY.md  build.rs  cargo.toml  changelog.txt  initrd  interstellar_os.img  notes.txt  rust-toolchain  rust-toolchain.toml  test.txt  to_do.txt
.cargo/: config.toml
.github/workflows/: rust-clippy.yml  rust.yml
gdb-windows/share/info/: dir  gdb.info
gdb-windows/share/man/man1/: gcore.1  gdb-add-index.1  gdb.1  gdbserver.1
gdb-windows/share/man/man5/: gdbinit.5
gdb-windows/share/source-highlight/: c.lang  cpp.lang  esc.style  symbols.lang
gdb/gdbinit/: commands.gdb
initrd-files/: test.txt
interstellar_os/: Cargo.toml  build.rs  rust-toolchain.toml
interstellar_os/src/: lib.rs  main.rs
interstellar_os/src/acpi/: mod.rs
interstellar_os/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
interstellar_os/src/drivers/fs/: initrd.rs  vfs.rs
interstellar_os/src/drivers/gui/: mod.rs  window_manager.rs
interstellar_os/src/drivers/hid/: keyboard.rs  mouse.rs
interstellar_os/src/drivers/io/: serial.rs
interstellar_os/src/drivers/random/: mod.rs
interstellar_os/src/drivers/screen/: framebuffer.rs
interstellar_os/src/gdt/: mod.rs
interstellar_os/src/interrupts/: handlers.rs  mod.rs
interstellar_os/src/memory/: mod.rs
interstellar_os/src/other/: assembly.rs  console.rs  info.rs  log.rs  tests.rs
interstellar_os/src/syscall/: mod.rs
interstellar_os/src/task/: console_handler.rs  executor.rs  keyboard.rs  mod.rs  mouse.rs
interstellar_os/src/time/: hpet.rs  mod.rs  pit.rs
interstellar_os/tests/: basic_boot.rs  heap_allocation.rs  random.rs  stack_overflow.rs  time.rs
interstellar_os_test_runner/: Cargo.toml  build.rs
interstellar_os_test_runner/src/: lib.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  assembly.rs  console.rs  debug.rs  gdt.rs  gui.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  syscall.rs  tests.rs  window_manager.rs
kernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
kernel/src/drivers/fs/: fat32.rs  initrd.rs
kernel/src/drivers/hid/: mouse.rs
kernel/src/drivers/screen/: framebuffer.rs
kernel/src/task/: console_handler.rs  executor.rs  keyboard.rs  mod.rs  mouse.rs  simple_executor.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs  syscall.rs
src/: allocator.rs  assembly.rs  console.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  syscall.rs  tests.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs  mouse.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs  syscall.rs
