[package]
name = "interstellar_os"
version = "0.1.0"
edition = "2021"


# CHANGING DEPENDENCIES VERSIONS WILL CAUSE ERRORS
[dependencies]
# To Build This We Need Bootimage To Merge The Bootloader And The OS Into A File
# And We Need llvm-tools-preview component for Bootloader - rustup component add llvm-tools-preview
bootloader = { version = "0.9.22", features = ["map_physical_memory"] }
# Makes It So That Reads And Writes To Memory Wont Be Optimized Away By The Compiler
volatile = "0.2.6"
# For Making Statics That Initialize At Run Time And Not Compile Time
lazy_static = { version = "1.4.0", features = ["spin_no_std"] } # With No Standard lib
# This Is Used To Make Spinlocks Which Can Be Used To Lock A Resource And Other Programs Will Constantly Run A Loop Requesting Access (But It Will Only Run The Programs Loops Seperatly) 
# And When The Program Is Free The Thread/Program Trying To Access It Will Be Given Access
spin = "0.5.2"
# For Exiting QUEMU By Writing To A Port
x86_64 = "0.14.2"
# This Is Used For Sending Data Over The Serial Port
uart_16550 = "0.2.0"
# This Is Used For The Interrupt Controller
pic8259 = "0.10.1"
# Used For Translating PS2 Keyboard Scan Codes
pc-keyboard = "0.7.0"
# Used For Allocation
linked_list_allocator = "0.10.2"
# Used For MultiTasking
crossbeam-queue = { version = "0.2.1", default-features = false, features = ["alloc"] }
# Used For One Time Init Of Static Values
conquer-once = { version = "0.2.0", default-features = false }
# Used For MultiTasking
futures-util = { version = "0.3.4", default-features = false, features = ["alloc"] }



# When Testing Append Args To QUEMU
[package.metadata.bootimage] 
# Redirect Serial Input To Main PC Standard Output
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"] # Port 0xf4, 4 bytes
test-success-exit-code = 33 # (0x10 << 1) | 1   Im Confused Why This Number Is 33?
test-timeout = 20 # Seconds

[[test]]
name = "should_panic" # For This Test 
harness = false # Disable Panic Handler

[[test]]
name = "stack_overflow"
harness = false